k8s/learning/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rizeppi-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rizeppi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /discovery-service
            pathType: Prefix
            backend:
              service:
                name: discovery-service
                port:
                  number: 8761
